force-app/main/default/objects/Advice__c/fields/Lead_Client__c.field-meta.xml
<CustomField>
    <fullName>Lead_Client__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Used when creating the fact find to know who the lead client should be</description>
    <label>Lead client</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Advice (Lead Client)</relationshipLabel>
    <relationshipName>Advice2</relationshipName>
    <type>Lookup</type>
</CustomField>