force-app/main/default/objects/Advice__c/fields/Licencing__c.field-meta.xml
<CustomField>
    <fullName>Licencing__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Partner Licencing</label>
    <referenceTo>Licencing__c</referenceTo>
    <relationshipLabel>Advice</relationshipLabel>
    <relationshipName>Advice</relationshipName>
    <type>Lookup</type>
</CustomField>