force-app/main/default/objects/Advice__c/fields/Licencing_reviewer__c.field-meta.xml
<CustomField>
    <fullName>Licencing_reviewer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Licencing reviewer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Advice1</relationshipName>
    <type>Lookup</type>
</CustomField>