force-app/main/default/objects/Advice__c/fields/Lifeline_presented_as_guidance_or_othe__c.field-meta.xml
<CustomField>
    <fullName>Lifeline_presented_as_guidance_or_othe__c</fullName>
    <inlineHelpText>Lifeline presented as &apos;guidance&apos; or otherwise without guarantee</inlineHelpText>
    <label>Lifeline presented as &apos;guidance&apos; or othe</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Licencing_RAG_Ratings</valueSetName>
    </valueSet>
</CustomField>