force-app/main/default/objects/Advice__c/fields/Lifetime_Allowance__c.field-meta.xml
<CustomField>
    <fullName>Lifetime_Allowance__c</fullName>
    <description>Number of recommendations in this advice</description>
    <label>Lifetime Allowance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>