force-app/main/default/objects/Advice__c/fields/LOA_s_Completed__c.field-meta.xml
<CustomField>
    <fullName>LOA_s_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>LOAs completed</label>
    <type>Checkbox</type>
</CustomField>