force-app/main/default/objects/Advice__c/fields/LoaAnalysisCompleteTimestamp__c.field-meta.xml
<CustomField>
    <fullName>LoaAnalysisCompleteTimestamp__c</fullName>
    <label>LOA analysis complete timestamp</label>
    <type>DateTime</type>
</CustomField>