force-app/main/default/objects/Advice__c/fields/LOAs_Linked__c.field-meta.xml
<CustomField>
    <fullName>LOAs_Linked__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox to ensure LOAs that are related to this advice are correctly linked</description>
    <label>All LOAs linked</label>
    <type>Checkbox</type>
</CustomField>