force-app/main/default/objects/Advice__c/fields/LOAs_outstanding__c.field-meta.xml
<CustomField>
    <fullName>LOAs_outstanding__c</fullName>
    <description>The number of related LOAs that are yet to be completed</description>
    <inlineHelpText>The number of related LOAs that are yet to be completed</inlineHelpText>
    <label>LOAs outstanding</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>