force-app/main/default/objects/Advice__c/fields/Max_Days_LOAs_Outstanding__c.field-meta.xml
<CustomField>
    <fullName>Max_Days_LOAs_Outstanding__c</fullName>
    <inlineHelpText>The longest a LOA has been outstanding, or all linked LOAs that are still outstanding</inlineHelpText>
    <label>Max days LOAs outstanding</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>