force-app/main/default/objects/Advice__c/fields/Meeting_Held_Date__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Held_Date__c</fullName>
    <label>Meeting held date</label>
    <type>Date</type>
</CustomField>