force-app/main/default/objects/Advice__c/fields/Meeting_Held_Days__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Held_Days__c</fullName>
    <formula>Meeting_Held_Date__c -  Deck_Complete_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Meeting Held Days</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>