force-app/main/default/objects/Advice__c/fields/Meeting_Type__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Type__c</fullName>
    <description>licencing</description>
    <label>Meeting type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accumulation</fullName>
            </value>
            <value>
                <fullName>Decumulation</fullName>
            </value>
            <value>
                <fullName>IHT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>