force-app/main/default/objects/Advice__c/fields/MeetingObserved__c.field-meta.xml
<CustomField>
    <fullName>MeetingObserved__c</fullName>
    <label>Was the meeting observed?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>