force-app/main/default/objects/Advice__c/fields/Narrative__c.field-meta.xml
<CustomField>
    <fullName>Narrative__c</fullName>
    <label>Opening narrative</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>