force-app/main/default/objects/Advice__c/fields/Narrative_Approval_days__c.field-meta.xml
<CustomField>
    <fullName>Narrative_Approval_days__c</fullName>
    <formula>Narrative_approval_complete_date__c  -  Planner_Suitability_Narrative_complete_d__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Narrative approval days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>