force-app/main/default/objects/Advice__c/fields/Narrative_Review__c.field-meta.xml
<CustomField>
    <fullName>Narrative_Review__c</fullName>
    <label>Narrative review</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>