force-app/main/default/objects/Advice__c/fields/New_LOAs_required__c.field-meta.xml
<CustomField>
    <fullName>New_LOAs_required__c</fullName>
    <inlineHelpText>This will start a workflow to create and send out new LOAs</inlineHelpText>
    <label>Additional LOAs required</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>