force-app/main/default/objects/Advice__c/fields/New_or_existing_client__c.field-meta.xml
<CustomField>
    <fullName>New_or_existing_client__c</fullName>
    <label>New or existing client</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Existing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>