force-app/main/default/objects/Advice__c/fields/OngoingAdviceFee__c.field-meta.xml
<CustomField>
    <fullName>OngoingAdviceFee__c</fullName>
    <description>The estimated ongoing advice fee that will apply on implementation of this advice</description>
    <inlineHelpText>The estimated ongoing advice fee that will apply on implementation of this advice</inlineHelpText>
    <label>Ongoing advice fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>