force-app/main/default/objects/Advice__c/fields/Originating_opportunity__c.field-meta.xml
<CustomField>
    <fullName>Originating_opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Only required for New Clients</inlineHelpText>
    <label>Originating opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Originating opportunity</relationshipLabel>
    <relationshipName>Advice</relationshipName>
    <type>Lookup</type>
</CustomField>