force-app/main/default/objects/Advice__c/fields/OtherClosedReason__c.field-meta.xml
<CustomField>
    <fullName>OtherClosedReason__c</fullName>
    <description>Business use: Used to capture why advice is being closed if none of the Closed Reason values fit
Tech use: populated in Advice | Cancel flow</description>
    <label>Other closed reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>