force-app/main/default/objects/Advice__c/fields/OW_advice_reason__c.field-meta.xml
<CustomField>
    <fullName>OW_advice_reason__c</fullName>
    <description>Intended to capture the reason(s) why we are giving this advice to the customer.</description>
    <inlineHelpText>What is the reason we are giving this advice? Select all that apply</inlineHelpText>
    <label>Advice reason</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Annual review</fullName>
            </value>
            <value>
                <fullName>Customer request</fullName>
            </value>
            <value>
                <fullName>Tax year end</fullName>
            </value>
            <value>
                <fullName>Onboarding</fullName>
            </value>
            <value>
                <fullName>IM to Hubwise switch</fullName>
            </value>
            <value>
                <fullName>Hartley to Hubwise switch</fullName>
                <isActive>false</isActive>
                <label>Hartley to Hubwise switch</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>