force-app/main/default/objects/Advice__c/fields/OW_amber_date__c.field-meta.xml
<CustomField>
    <fullName>OW_amber_date__c</fullName>
    <description>The date on which the advice will be moved to amber status based on the current status, SLA, and warning offset.</description>
    <inlineHelpText>The date when this advice will move to amber</inlineHelpText>
    <label>Amber date</label>
    <type>Date</type>
</CustomField>