force-app/main/default/objects/Advice__c/fields/OW_dedicated_specialist__c.field-meta.xml
<CustomField>
    <fullName>OW_dedicated_specialist__c</fullName>
    <formula>Advice_Household__r.OW_dedicated_specialist__r.FirstName &amp; &quot; &quot; &amp; Advice_Household__r.OW_dedicated_specialist__r.LastName</formula>
    <label>Dedicated specialist</label>
    <type>Text</type>
</CustomField>