force-app/main/default/objects/Advice__c/fields/OW_external_id__c.field-meta.xml
<CustomField>
    <fullName>OW_external_id__c</fullName>
    <externalId>true</externalId>
    <label>External ID</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>