force-app/main/default/objects/Advice__c/fields/OW_GIA_RAG__c.field-meta.xml
<CustomField>
    <fullName>OW_GIA_RAG__c</fullName>
    <label>OW GIA RAG</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Licencing_RAG_Ratings</valueSetName>
    </valueSet>
</CustomField>