force-app/main/default/objects/Advice__c/fields/OW_rag__c.field-meta.xml
<CustomField>
    <fullName>OW_rag__c</fullName>
    <description>The current RAG status of this advice based on the status and the SLA that applies to that. Blank if not SLA applies.</description>
    <formula>IF( ISBLANK(OW_status_sla__c), &quot;&quot;, 

IF( TODAY() &gt; OW_status_due_date__c, IMAGE(&quot;https://img.icons8.com/emoji/48/000000/red-circle-emoji.png&quot;, &quot;Red&quot;,30, 30),  

IF(TODAY() &gt; OW_amber_date__c, IMAGE(&quot;https://img.icons8.com/emoji/48/000000/orange-circle-emoji.png&quot;, &quot;Amber&quot;,30, 30), 

IMAGE(&quot;https://img.icons8.com/emoji/48/000000/green-circle-emoji.png&quot;, &quot;Green&quot;, 30, 30))))</formula>
    <label>RAG</label>
    <type>Text</type>
</CustomField>