force-app/main/default/objects/Advice__c/fields/OW_review__c.field-meta.xml
<CustomField>
    <fullName>OW_review__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Concurrent Annual Review to Advice</description>
    <inlineHelpText>This field can be updated by linking to this advice from a review.</inlineHelpText>
    <label>Review</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>The advice and annual review must be linked to the same household.

(Admin message: filter criteria on OW_review__c field on the Advice__c object)</errorMessage>
        <filterItems>
            <field>$Source.Advice_Household__c</field>
            <operation>equals</operation>
            <valueField>OW_review__c.OW_household__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>OW_review__c</referenceTo>
    <relationshipLabel>Advice</relationshipLabel>
    <relationshipName>Advice</relationshipName>
    <type>Lookup</type>
</CustomField>