force-app/main/default/objects/Advice__c/fields/OW_specialist_notes__c.field-meta.xml
<CustomField>
    <fullName>OW_specialist_notes__c</fullName>
    <label>Specialist notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>