force-app/main/default/objects/Advice__c/fields/OW_status_due_date__c.field-meta.xml
<CustomField>
    <fullName>OW_status_due_date__c</fullName>
    <description>The date by which this advice status must be complete based on the current status and the SLA that applies. Blank if no SLA applies to that status.</description>
    <label>Status due date</label>
    <type>Date</type>
</CustomField>