force-app/main/default/objects/Advice__c/fields/OW_status_due_date_formula__c.field-meta.xml
<CustomField>
    <fullName>OW_status_due_date_formula__c</fullName>
    <description>The date by which this advice status must be complete based on the current status and the SLA that applies. Blank if no SLA applies to that status.</description>
    <formula>IF( ISBLANK( OW_status_sla__c ), null,
OW_status_start_date_formula__c +
CASE( MOD( OW_status_start_date_formula__c - DATE(1900, 1, 1), 7),
0, OW_status_sla__c + FLOOR(OW_status_sla__c / 5) * 2,
1, OW_status_sla__c + FLOOR((OW_status_sla__c + 1) / 5) * 2,
2, OW_status_sla__c + FLOOR((OW_status_sla__c + 2) / 5) * 2,
3, OW_status_sla__c + FLOOR((OW_status_sla__c + 3) / 5) * 2,
4, OW_status_sla__c + FLOOR((OW_status_sla__c + 4) / 5) * 2,
5, OW_status_sla__c + FLOOR(OW_status_sla__c / 5) * 2 + 2,
6, OW_status_sla__c + FLOOR(OW_status_sla__c / 5) * 2 + 1, null) )</formula>
    <label>Status due date (formula)</label>
    <type>Date</type>
</CustomField>