force-app/main/default/objects/Advice__c/fields/OW_status_sla__c.field-meta.xml
<CustomField>
    <fullName>OW_status_sla__c</fullName>
    <description>The SLA in business days that applies to a particular advice status. If blank, no status applies.</description>
    <inlineHelpText>If blank, no SLA applies for this status.</inlineHelpText>
    <label>Status SLA</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>