force-app/main/default/objects/Advice__c/fields/OW_status_sla_formula__c.field-meta.xml
<CustomField>
    <fullName>OW_status_sla_formula__c</fullName>
    <description>The SLA in business days that applies to a particular advice status. Blank in the statuses that do not have an SLA.</description>
    <formula>CASE( Advice_Status__c,
&quot;Setup&quot;,  $CustomMetadata.OW_sla__mdt.OW_advice_setup.OW_sla__c, 
&quot;Data gathering&quot;,  $CustomMetadata.OW_sla__mdt.OW_advice_data_gathering.OW_sla__c,
&quot;In fulfilment&quot;,  $CustomMetadata.OW_sla__mdt.OW_advice_in_fulfilment.OW_sla__c, 
null )</formula>
    <label>Status SLA (formula)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>