force-app/main/default/objects/Advice__c/fields/OW_status_start_date__c.field-meta.xml
<CustomField>
    <fullName>OW_status_start_date__c</fullName>
    <description>The start date that applies to this status when determining the due date. Only populated for statuses that have an SLA.</description>
    <label>Status start date</label>
    <type>Date</type>
</CustomField>