force-app/main/default/objects/Advice__c/fields/OW_user_is__c.field-meta.xml
<CustomField>
    <fullName>OW_user_is__c</fullName>
    <description>This field checks the logged in user for certain conditions and returns a string based on the result. Used to check the user&apos;s role on the advice.</description>
    <formula>IF( Advice_Household__r.OW_dedicated_specialist__c =  $User.Id, &quot;Specialist lead&quot;,
IF( Advice_Household__r.OwnerId =  $User.Id, &quot;Partner&quot;,
IF(  Assigned_planner__c =  $User.Id, &quot;Planner&quot;, 
&quot;&quot; )))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>User is</label>
    <type>Text</type>
</CustomField>