force-app/main/default/objects/Advice__c/fields/OW_warning_offset_formula__c.field-meta.xml
<CustomField>
    <fullName>OW_warning_offset_formula__c</fullName>
    <description>The number of business days ahead of the status due date at which this advice should move into an amber status.</description>
    <formula>CASE( Advice_Status__c,
&quot;Setup&quot;, $CustomMetadata.OW_sla__mdt.OW_advice_setup.OW_warning_offset__c, 
&quot;Data gathering&quot;,  $CustomMetadata.OW_sla__mdt.OW_advice_data_gathering.OW_warning_offset__c,
&quot;In fulfilment&quot;,  $CustomMetadata.OW_sla__mdt.OW_advice_in_fulfilment.OW_warning_offset__c, 
null )</formula>
    <label>Warning offset (formula)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>