force-app/main/default/objects/Advice__c/fields/Owner__c.field-meta.xml
<CustomField>
    <fullName>Owner__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Owner</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Advice (Owner)</relationshipLabel>
    <relationshipName>Advice1</relationshipName>
    <type>Lookup</type>
</CustomField>