force-app/main/default/objects/Advice__c/fields/Partner__c.field-meta.xml
<CustomField>
    <fullName>Partner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Partner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Advice</relationshipName>
    <type>Lookup</type>
</CustomField>