force-app/main/default/objects/Advice__c/fields/Partner_Comments__c.field-meta.xml
<CustomField>
    <fullName>Partner_Comments__c</fullName>
    <label>Partner comments</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>