force-app/main/default/objects/Advice__c/fields/PersonalisedLifelineRequested__c.field-meta.xml
<CustomField>
    <fullName>PersonalisedLifelineRequested__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Record if a client has requested a personalised lifeline</description>
    <label>Personalised lifeline requested</label>
    <type>Checkbox</type>
</CustomField>