force-app/main/default/objects/Advice__c/fields/Planner_Licencing_Deck__c.field-meta.xml
<CustomField>
    <fullName>Planner_Licencing_Deck__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Planning licencing - deck</label>
    <referenceTo>Licencing__c</referenceTo>
    <relationshipLabel>Advice (Planner Licencing - Deck)</relationshipLabel>
    <relationshipName>Advice2</relationshipName>
    <type>Lookup</type>
</CustomField>