force-app/main/default/objects/Advice__c/fields/Planner_Suitability_Narrative_complete_d__c.field-meta.xml
<CustomField>
    <fullName>Planner_Suitability_Narrative_complete_d__c</fullName>
    <label>Planner suitability narrative complete</label>
    <type>Date</type>
</CustomField>