force-app/main/default/objects/Advice__c/fields/Planner_Suitability_Narrative_days__c.field-meta.xml
<CustomField>
    <fullName>Planner_Suitability_Narrative_days__c</fullName>
    <formula>Planner_Suitability_Narrative_complete_d__c  -  Ready_for_Suitability_Complete_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Planner Suitability Narrative days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>