force-app/main/default/objects/Advice__c/fields/Planning_licencing__c.field-meta.xml
<CustomField>
    <fullName>Planning_licencing__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Planning licencing - narrative</label>
    <referenceTo>Licencing__c</referenceTo>
    <relationshipLabel>Advice (Planning Licencing)</relationshipLabel>
    <relationshipName>Advice1</relationshipName>
    <type>Lookup</type>
</CustomField>