force-app/main/default/objects/Advice__c/fields/PlanningNotes__c.field-meta.xml
<CustomField>
    <fullName>PlanningNotes__c</fullName>
    <description>For the planning team to capture notes as part of managing their work.</description>
    <label>Planning notes</label>
    <type>TextArea</type>
</CustomField>