force-app/main/default/objects/Advice__c/fields/PlatformLastModifiedBy__c.field-meta.xml
<CustomField>
    <fullName>PlatformLastModifiedBy__c</fullName>
    <label>Platform Last Modified By</label>
    <length>18</length>
    <type>Text</type>
</CustomField>