force-app/main/default/objects/Advice__c/fields/PlatformLastModifiedDateTime__c.field-meta.xml
<CustomField>
    <fullName>PlatformLastModifiedDateTime__c</fullName>
    <label>Platform last modified date time</label>
    <type>DateTime</type>
</CustomField>