force-app/main/default/objects/Advice__c/fields/Prepare_fulfilment_complete_date__c.field-meta.xml
<CustomField>
    <fullName>Prepare_fulfilment_complete_date__c</fullName>
    <label>Prepare fulfilment complete date</label>
    <type>Date</type>
</CustomField>