force-app/main/default/objects/Advice__c/fields/Prepare_fulfilment_days__c.field-meta.xml
<CustomField>
    <fullName>Prepare_fulfilment_days__c</fullName>
    <formula>Prepare_fulfilment_complete_date__c  -  Suitability_approval_complete_date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Prepare fulfilment days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>