force-app/main/default/objects/Advice__c/fields/ProcessVersion__c.field-meta.xml
<CustomField>
    <fullName>ProcessVersion__c</fullName>
    <defaultValue>1.001</defaultValue>
    <description>Used to capture the version of the process the advice is on. This will drive things like validation rules and page views where these can be tied to the version of the advice process and introduced only going forwards or, equally, retired.</description>
    <label>Process version</label>
    <precision>6</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>