force-app/main/default/objects/Advice__c/fields/Product_research_complete_date__c.field-meta.xml
<CustomField>
    <fullName>Product_research_complete_date__c</fullName>
    <label>Product research complete date</label>
    <type>Date</type>
</CustomField>