force-app/main/default/objects/Advice__c/fields/Profile_Snapshot__c.field-meta.xml
<CustomField>
    <fullName>Profile_Snapshot__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Profile Snapshot</label>
    <referenceTo>FF_Session__c</referenceTo>
    <relationshipLabel>Advice</relationshipLabel>
    <relationshipName>Advice</relationshipName>
    <type>Lookup</type>
</CustomField>