force-app/main/default/objects/Advice__c/fields/Profile_Status__c.field-meta.xml
<CustomField>
    <fullName>Profile_Status__c</fullName>
    <formula>TEXT(Advice_Household__r.Fact_Find_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Profile Type</label>
    <type>Text</type>
</CustomField>