force-app/main/default/objects/Advice__c/fields/ProfileUpdateStatus__c.field-meta.xml
<CustomField>
    <fullName>ProfileUpdateStatus__c</fullName>
    <description>Tracks the requirements for profile requirements for this advice</description>
    <label>Profile update status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not required</fullName>
            </value>
            <value>
                <fullName>Not started</fullName>
            </value>
            <value>
                <fullName>In progress</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>Incomplete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>