force-app/main/default/objects/Advice__c/fields/Protection__c.field-meta.xml
<CustomField>
    <fullName>Protection__c</fullName>
    <description>Number of Recommendations</description>
    <label>Protection</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>