force-app/main/default/objects/Advice__c/fields/Questionnaire_Status__c.field-meta.xml
<CustomField>
    <fullName>Questionnaire_Status__c</fullName>
    <formula>TEXT(Full_Fact_Find__r.FF_Status__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Questionnaire status</label>
    <type>Text</type>
</CustomField>