force-app/main/default/objects/Advice__c/fields/Questionnaire_URL__c.field-meta.xml
<CustomField>
    <fullName>Questionnaire_URL__c</fullName>
    <formula>Full_Fact_Find__r.FF_Questionnaire_link__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Client questionnaire URL</label>
    <type>Text</type>
</CustomField>