force-app/main/default/objects/Advice__c/fields/Ready_for_4_eye_days__c.field-meta.xml
<CustomField>
    <fullName>Ready_for_4_eye_days__c</fullName>
    <formula>Ready_for_4_eye_complete_date__c  -  Create_deck_complete_date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ready for 4 eye days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>