force-app/main/default/objects/Advice__c/fields/Ready_for_Partner_call__c.field-meta.xml
<CustomField>
    <fullName>Ready_for_Partner_call__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ready for partner call</label>
    <type>Checkbox</type>
</CustomField>