force-app/main/default/objects/Advice__c/fields/Ready_for_Suitability_Complete_Date__c.field-meta.xml
<CustomField>
    <fullName>Ready_for_Suitability_Complete_Date__c</fullName>
    <description>Ready for suitability completed date</description>
    <label>Ready for Suitability Complete Date</label>
    <type>Date</type>
</CustomField>