force-app/main/default/objects/Advice__c/fields/Ready_for_Suitability_Days__c.field-meta.xml
<CustomField>
    <fullName>Ready_for_Suitability_Days__c</fullName>
    <formula>Ready_for_Suitability_Complete_Date__c -  Data_Gathering_Complete_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ready for Suitability Days</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>