force-app/main/default/objects/Advice__c/fields/RebalancesSetUp__c.field-meta.xml
<CustomField>
    <fullName>RebalancesSetUp__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This box is ticked once the set up rebalances flow has been run for the first time on this advice, to indicate that someone has already set up some rebalances</description>
    <label>Rebalances set up</label>
    <type>Checkbox</type>
</CustomField>