force-app/main/default/objects/Advice__c/fields/Recorded_meeting_disclosure__c.field-meta.xml
<CustomField>
    <fullName>Recorded_meeting_disclosure__c</fullName>
    <label>Recorded meeting disclosure</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Licencing_RAG_Ratings</valueSetName>
    </valueSet>
</CustomField>