force-app/main/default/objects/Advice__c/fields/RetirementCallDate__c.field-meta.xml
<CustomField>
    <fullName>RetirementCallDate__c</fullName>
    <description>The date we held the retirement call, if one was held.</description>
    <label>Retirement call date</label>
    <type>Date</type>
</CustomField>