force-app/main/default/objects/Advice__c/fields/RetirementCallDeckUrl__c.field-meta.xml
<CustomField>
    <fullName>RetirementCallDeckUrl__c</fullName>
    <description>This field will contain the URL of the retirement call deck if there is one.</description>
    <label>Retirement call deck URL</label>
    <type>Url</type>
</CustomField>