force-app/main/default/objects/Advice__c/fields/RetirementCallStatus__c.field-meta.xml
<CustomField>
    <fullName>RetirementCallStatus__c</fullName>
    <description>This field captures whether the status around retirement call for a given bit of advice - is one required or not and whether it&#39;s complete, if it was required.</description>
    <label>Retirement call status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NOT_REQUIRED</fullName>
                <label>Not required</label>
            </value>
            <value>
                <fullName>REQUIRED</fullName>
                <label>Required</label>
            </value>
            <value>
                <fullName>PRESENT</fullName>
                <label>Present content</label>
            </value>
            <value>
                <fullName>COMPLETE</fullName>
                <label>Complete</label>
            </value>
            <value>
                <fullName>NEVER_REQUIRED</fullName>
                <label>Never required</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>