force-app/main/default/objects/Advice__c/fields/Risk_Discussion_Completed__c.field-meta.xml
<CustomField>
    <fullName>Risk_Discussion_Completed__c</fullName>
    <description>Partners must complete these notes to complete the partner check in</description>
    <label>Risk discussion notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>