force-app/main/default/objects/Advice__c/fields/Risk_Score__c.field-meta.xml
<CustomField>
    <fullName>Risk_Score__c</fullName>
    <inlineHelpText>Where do you think you sit on a risk scale of 1-10 (with 10 being very high risk)?

Give actual risk questionnaire score.</inlineHelpText>
    <label>Risk score</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>