force-app/main/default/objects/Advice__c/fields/RiskCallStatus__c.field-meta.xml
<CustomField>
    <fullName>RiskCallStatus__c</fullName>
    <defaultValue>&quot;Not ready&quot;</defaultValue>
    <description>Indicates the progress towards the risk call</description>
    <label>Risk call status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not ready</fullName>
            </value>
            <value>
                <fullName>Ready</fullName>
            </value>
            <value>
                <fullName>Booked</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>Not required</fullName>
                <default>true</default>
                <label>Not required</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>