force-app/main/default/objects/Advice__c/fields/Scope_of_Advice_URL__c.field-meta.xml
<CustomField>
    <fullName>Scope_of_Advice_URL__c</fullName>
    <label>Scope of Advice URL</label>
    <type>Url</type>
</CustomField>