force-app/main/default/objects/Advice__c/fields/Setup_Complete_Date__c.field-meta.xml
<CustomField>
    <fullName>Setup_Complete_Date__c</fullName>
    <description>Date setup complete</description>
    <label>Setup complete date</label>
    <type>Date</type>
</CustomField>