force-app/main/default/objects/Advice__c/fields/Splitting_of_advice_optional__c.field-meta.xml
<CustomField>
    <fullName>Splitting_of_advice_optional__c</fullName>
    <inlineHelpText>This is a prompt to tee up splitting of advice into multiple meetings i.e. where it has been decided where there are too many things to cover in a single meeting.

Document how splitting of advice has been agreed with client.</inlineHelpText>
    <label>Splitting of advice (optional)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>