force-app/main/default/objects/Advice__c/fields/Suitability_approval_complete_date__c.field-meta.xml
<CustomField>
    <fullName>Suitability_approval_complete_date__c</fullName>
    <label>Suitability approval complete date</label>
    <type>Date</type>
</CustomField>