force-app/main/default/objects/Advice__c/fields/Suitability_Builder_Link__c.field-meta.xml
<CustomField>
    <fullName>Suitability_Builder_Link__c</fullName>
    <description>Link to Suitability Builder Google Sheet</description>
    <inlineHelpText>Suitability Builder Google Sheet Link</inlineHelpText>
    <label>Suitability builder link</label>
    <type>Url</type>
</CustomField>